DASH-3562 Create page setup option on Resources

--- a/src/applications/appsco-resources-page-actions.html
+++ b/src/applications/appsco-resources-page-actions.html
@@ -153,6 +153,7 @@
         <appsco-application-actions id="appscoApplicationsActions"
                                     authorization-token="[[ authorizationToken ]]"
                                     filter-api="[[ filterApi ]]"
+                                    page-config="[[ pageConfig ]]"
                                     company
                                     on-search-icon="_onSearchIcon"
                                     on-close-search="_closeSearch"></appsco-application-actions>
