DASH-3566 [Frontend] Enable grid view on Resources page

--- a/src/appsco-resources-page.html
+++ b/src/appsco-resources-page.html
@@ -476,6 +476,8 @@
                 } else {
                     this.$.appscoContent.showSection('resource')
                 }
+
+                this.$.appscoResources.setDisplayStyle(newValue.display_style);
             },
 
             _showBulkActions: function() {
