--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -2404,17 +2404,18 @@
             _onCurrentCompanyChanged: function(company, oldCompany) {
 
                 if (company && company.company) {
-                    this._setResourceAdmin(company, function() {
+                    this._setResourceAdmin(company);
+                    this._personalFolderPage = false;
+
+                    setTimeout(function() {
                         if (
                             this.account && this.account.profile_options
                             && (this.account.profile_options.default_company_page === 'resources')
-                            && (this._companyAdmin || this._resourceAdmin)
                             && (this.page === 'company-home')
                         ) {
                             this.page = 'resources';
                         }
-                    }.bind(this));
-                    this._personalFolderPage = false;
+                    }.bind(this), 100);
 
                     for (key in company.company) {
                         this._storeValue('company', company.company.alias);
@@ -2486,7 +2487,7 @@
                 return company.company_admin;
             },
 
-            _setResourceAdmin: function(currentCompany, resourceAdminCallback) {
+            _setResourceAdmin: function(currentCompany) {
                 var request = document.createElement('iron-request'),
                     options = {
                         url: this.api.getUserPrivilegesApi,
@@ -2504,7 +2505,6 @@
                     this._resourceAdmin = ((200 == request.status) ?
                         (request.response.scopes['COMPANY_APPLICATION_LIST'] && !this._companyAdmin) :
                         false);
-                    resourceAdminCallback();
                 }.bind(this));
             },
 
