DASH-3566 [Frontend] Enable grid view on Resources page

--- a/src/applications/appsco-resources-page-actions.html
+++ b/src/applications/appsco-resources-page-actions.html
@@ -154,6 +154,7 @@
                                     authorization-token="[[ authorizationToken ]]"
                                     filter-api="[[ filterApi ]]"
                                     page-config="[[ pageConfig ]]"
+                                    resource-admin="[[ resourceAdmin ]]"
                                     company
                                     on-search-icon="_onSearchIcon"
                                     on-close-search="_closeSearch"></appsco-application-actions>
