DASH-3542 AppsCo Audit page

--- a/src/auditlog/appsco-audit-log.html
+++ b/src/auditlog/appsco-audit-log.html
@@ -44,6 +44,7 @@
             }
             .log-record .account-info {
                 width: 20%;
+                overflow: hidden;
                 @apply(--layout-horizontal);
                 @apply(--layout-center);
             }
@@ -116,6 +117,7 @@
                 @apply(--load-more-button);
             }
             :host .account-info div {
+                overflow: hidden;
                 width: 80%;
             }
             :host .account-info div span {
