DASH-3617 Reloading page on https://my-dev.appsco.com/resource/<resourceId> results in 404

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -491,6 +491,7 @@
                             company="[[ _companyPage ]]"
                             application="{{ application }}"
                             applications-api="[[ _applicationsApi ]]"
+                            icons-api="[[ api.icons ]]"
                             application-log="[[ application.meta.log ]]"
                             authorization-token="[[ authorizationToken ]]"
                             accounts-api="[[ api.accounts ]]"
