DASH-3622 Error when turning on auto login

--- a/src/applications/appsco-manage-application-components-page.html
+++ b/src/applications/appsco-manage-application-components-page.html
@@ -596,7 +596,7 @@
             _onAutologinChanged: function() {
                 this._autologinItem = !this._autologinItem;
 
-                this.$.appscoApplicationLog.load();
+                this.$$('#appscoApplicationLog').load();
             },
 
             showAdvanced: function() {
