DASH-3619 Adding group using create group button on groups page results in console error

--- a/src/appsco-resources-page.html
+++ b/src/appsco-resources-page.html
@@ -503,11 +503,11 @@
             },
 
             addGroup: function(group) {
-                this.$$('appscoCompanyGroups').addItems([group]);
+                this.$$('#appscoCompanyGroups').addItems([group]);
             },
 
             removeGroup: function(group) {
-                this.$$('appscoCompanyGroups').removeItems([group]);
+                this.$$('#appscoCompanyGroups').removeItems([group]);
             },
 
             _handleResourceInfo: function(resource) {
