DASH-3624 Console error when removing resource admin

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -4474,7 +4474,7 @@
                     this.$.appscoManageApplicationPage.reloadResourceAdmins();
                 }
 
-                if (this.$.appscoManageAccountPage) {
+                if (this.$.appscoManageAccountPage.$) {
                     this.$.appscoManageAccountPage.reloadResourceAdmins();
                 }
 
