DASH-3621 Current compliance info is not shown in dialog for company resource

--- a/src/applications/appsco-application-compliance-page.html
+++ b/src/applications/appsco-application-compliance-page.html
@@ -264,7 +264,7 @@
 
             _computeValues: function(newValue) {
                 this._descriptionValue = (newValue && newValue.compliance && newValue.compliance.description) ? newValue.compliance.description : '';
-                this._fieldsValue = (newValue && newValue.compliance && newValue.compliance.description) ? newValue.compliance.description : '';
+                this._fieldsValue = (newValue && newValue.compliance && newValue.compliance.fields) ? newValue.compliance.fields: '';
             }
 
         });
